--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,7 +82,7 @@
     <string name="pref_hwcodec_key">hwcodec_preference</string>
     <string name="pref_hwcodec_title">Video codec hardware acceleration.</string>
     <string name="pref_hwcodec_dlg">Use hardware accelerated video codec (if available).</string>
-    <string name="pref_hwcodec_default">true</string>
+    <string name="pref_hwcodec_default">false</string>
 
     <string name="pref_capturetotexture_key">capturetotexture_preference</string>
     <string name="pref_capturetotexture_title">Video capture to surface texture.</string>
